update CMS Connect links per request from @khurtado

--- a/portal/templates/nav.html
+++ b/portal/templates/nav.html
@@ -203,8 +203,8 @@
             Documentation
         </a>
         <div class="dropdown-menu dropdown-menu-right">
-            <a class="dropdown-item" href="https://ci-connect.atlassian.net/wiki/spaces/CMS/overview" target="_blank">Overview</a>
-            <a class="dropdown-item" href="https://ci-connect.atlassian.net/wiki/spaces/CMS/pages/22609980/Introduction+to+CMS+Connect" target="_blank">Handbook</a>
+            <a class="dropdown-item" href="https://twiki.cern.ch/twiki/bin/view/CMSPublic/WorkBookCMSConnect#Introduction" target="_blank">Overview</a>
+            <a class="dropdown-item" href="https://twiki.cern.ch/twiki/bin/view/Main/SwGuideCMSConnect" target="_blank">Handbook</a>
             <a class="dropdown-item" href="{{url_for('aup')}}">Acceptable Use Policy</a>
             <a class="dropdown-item" href="{{url_for('about')}}">About</a>
         </div>
