--- a/portal/templates/scripts.html
+++ b/portal/templates/scripts.html
@@ -112,8 +112,8 @@ $(document).ready(function() {
   //   gtag('js', new Date());
   //   gtag('config', 'UA-178331567-4');
   //   connect_brand.src="{{url_for('static', filename='img/cms-connect-logo.png')}}";
-  //   $('#nav-overview').attr('href', 'https://ci-connect.atlassian.net/wiki/spaces/CMS/overview').show();
-  //   $('#nav-handbook').attr('href', 'https://ci-connect.atlassian.net/wiki/spaces/CMS/pages/22609980/Introduction+to+CMS+Connect').show();
+  //   $('#nav-overview').attr('href', 'https://twiki.cern.ch/twiki/bin/view/CMSPublic/WorkBookCMSConnect#Introduction').show();
+  //   $('#nav-handbook').attr('href', 'https://twiki.cern.ch/twiki/bin/view/Main/SwGuideCMSConnect').show();
   //   $('#nav-email').attr('href', 'mailto:cms-connect-support@cern.ch');
   //   document.getElementById("login-node-nav").style.display = "inline";
   //   var title = 'login.uscms.org';
