--- a/portal/templates/nav.html
+++ b/portal/templates/nav.html
@@ -82,12 +82,15 @@
     <li class="nav-item">
         <a class="nav-link" href="{{url_for('about')}}">About</a>
     </li>
+    {% if 'www.ci-connect.net' in request.host or 'duke.ci-connect.net' in request.host %}
+    {% else %}
     <li class="nav-item">
         <a class="nav-link" href="{{url_for('login')}}">Login</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="{{url_for('signup')}}">Sign Up</a>
     </li>
+    {% endif %
     {% endif %}
 {% elif 'snowmass21.ci-connect.net' in request.host or 'snowmass21.io' in request.host %}
     {% if session.get('is_authenticated') and session.get('unix_name') %}
