--- a/portal/templates/home_brand.html
+++ b/portal/templates/home_brand.html
@@ -1,7 +1,7 @@
 {% if 'af.uchicago.edu' in request.host %}
 <img src="{{url_for('static', filename='img/atlas-af-logo.png')}}" style="width:30%;">
 {% elif 'www-test.ci-connect.net' in request.host %}
-<img src="{{url_for('static', filename='img/atlas-af-logo.png')}}" style="width:30%;">
+<img src="{{url_for('static', filename='img/CIConnect_logo.png')}}" style="width:30%;">
 {% elif 'snowmass21.ci-connect.net' in request.host or 'snowmass21.io' in request.host %}
 <img src="{{url_for('static', filename='img/snowmass-connect-logo.png')}}" style="width:30%;">
 {% elif 'atlas.ci-connect.net' in request.host or 'usatlas.org' in request.host %}
@@ -19,5 +19,5 @@
 {% elif 'uscms.org' in request.host %}
 <img src="{{url_for('static', filename='img/cms-connect-logo.png')}}" style="width:30%;">
 {% else %}
-<img src="{{url_for('static', filename='img/atlas-af-logo.png')}}" style="width:30%;">
+<img src="{{url_for('static', filename='img/CIConnect_Logo.png')}}" style="width:30%;">
 {% endif %}
