--- a/portal/templates/base.html
+++ b/portal/templates/base.html
@@ -24,7 +24,13 @@
     <meta name="theme-color" content="#ffffff">
 
     <title>
-      {% if 'af.uchicago.edu' in request.host or 'www-test.ci-connect.net' in request.host or 'localhost' in request.host %}AF{% else %}Connect{% endif %} - {%block title%}{%endblock%}
+      {% if 'af.uchicago.edu' in request.host or 'www-test.ci-connect.net' in request.host %}
+        AF
+      {% elif 'www-test.ci-connect.net' in request.host or 'localhost' in request.host %}
+        (dev) Connect
+      {% else %}Connect
+      {% endif %} 
+       - {%block title%}{%endblock%}
     </title>
 
     {# CSS files #}
