--- a/portal/templates/home.html
+++ b/portal/templates/home.html
@@ -16,6 +16,7 @@
     {% if session.get('is_authenticated') %}
     {% elif 'www.ci-connect.net' in request.host %}
     {% elif 'duke.ci-connect.net' in request.host %}
+    {% elif 'connect.snowmass21.io' in request.host %}
     {% else %}
     <a role="button" href="{{url_for('login')}}" class="btn btn-primary btn-box-shadow">Login</a>
     <a role="button" href="{{url_for('signup')}}" class="btn btn-primary btn-box-shadow">Sign Up</a>
